# Snake

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  PlayWindow.cpp  PlayWindow.h  README.en.md  README.md  Resource.qrc  Snake.cpp  Snake.h  main.cpp  style.css
